--- a/style.css
+++ b/style.css
@@ -68,11 +68,12 @@ header a:hover {
     margin: 20px auto;
     text-align: center;
     border-radius: 10px;
-    padding-top: 20px;
+    font-family: "Montserrat", sans-serif;
 }
 
 .button:hover {
     background-color: var(--cor--principal);
+    color: var(--cor--secundaria);
 }
 
 
@@ -99,7 +100,7 @@ section p {
     line-height: 1.3;
 }
 
-h2 {
+h2, h1 {
     text-align: center;
     margin: 20px;
     padding: 10px;
@@ -144,4 +145,33 @@ footer {
 footer h3 {
     text-align: center;
     padding: 20px;
+}
+
+/*reponsividade*/
+
+@media (max-width: 560px) {
+
+.conteudo{
+    width: 95%;
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+nav li{
+    margin: 0 10px;
+    text-align: center;
+}
+
+.button{
+    width: 60%;
+}
+
+.development-left h2, p{
+    flex: auto calc(100% - 1rem);
+}
+
 }
